--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ ul {
     
 
 }
+
 a {
     text-decoration:none ;
     color: #f9faf8;
@@ -64,7 +65,7 @@ a {
 
 }
 
-button  {
+.button  {
     background-color: #3882f6;
     color: #f9faf8;
     border: 1px solid #3882f6;
@@ -108,17 +109,46 @@ img {
 }
 
 .quote {
-    padding: 50px 100px;
+    padding: 64px 124px;
 
 }
+
 .perso {
     text-align: end;
-    padding-right: 100px;
-    padding-bottom: 50px;
+    padding-right: 124px;
+    padding-bottom: 64px;
 }
+
 .image-two {
     width: 200px;
 }
+
 .subtext {
     width: 200px;
+}
+.section-three {
+    padding: 100px 200px;
+
+}
+
+.card {
+    background-color: #3882f6;
+    color: #f9faf8;
+    border-radius: 8px;
+    padding: 32px 64px;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.section-three .button {
+    border: 1px solid #f9faf8;
+}
+
+.footer {
+    background-color: #1f2937;
+    color: #f9faf8;
+    text-align: center;
+    padding: 16px;
 }
